# trading

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  Pipfile  README.md  STRATEGIES.md  TODO.md  bhp_analysis.py  pyproject.toml  pytest.ini  requirements.txt  trade_analysis.py
07/bb56828177/: metadata.json
07/e7373151c6/: metadata.json
10/9ce959d3c2/: metadata.json
16/a33aab9fe3/: metadata.json
backtest/: benchmarks.py  config.py  constants.py  deployment_gate.py  interfaces.py  llm_analysis.py  metrics.py  optimization.py  portfolio.py  reporting.py  reporting_html.py  runner.py  strategies.py  strategy.py  strategy_card.py  validation.py
examples/: basic_backtest.py  compare_strategies.py  ensemble_strategy.py  multi_asset_portfolio.py  parameter_sensitivity.py  run_backtest.py  walk_forward_analysis.py
tests/: conftest.py  test_backtest_interfaces.py  test_benchmarks.py  test_bollinger_bands_strategy.py  test_breakout_strategy.py  test_config.py  test_consecutive_days_strategy.py  test_deployment_gate.py  test_ensemble_strategy.py  test_fibonacci_retracement_strategy.py  test_gap_strategy.py  test_llm_analysis.py  test_macd_strategy.py  test_mean_reversion_strategy.py  test_metrics.py  test_momentum_strategy.py  test_moving_average_strategy.py  test_optimization.py  test_parabolic_sar_strategy.py  test_portfolio.py  test_position_carry.py  test_regime_filtered_strategy.py  test_reporting.py  test_reporting_html.py  test_rsi_strategy.py  test_runner.py  test_strategy_card.py  test_trade_analysis_ensembles.py  test_trade_analysis_selection.py  test_trade_analysis_wfa_routing.py  test_transaction_costs.py  test_validation.py  test_volatility_strategy.py
(+224 files in other folders)
