[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest"
version = "0.1.0"
description = "Trading strategy backtesting framework with walk-forward analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "ta>=0.11.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backtest"]
